Uploaded image for project: 'Geode'
  1. Geode
  2. GEODE-7418

Crash in deserialization of JSON Pdx value when PdxReadSerialized=false

    XMLWordPrintableJSON

Details

    • Bug
    • Status: Closed
    • Major
    • Resolution: Fixed
    • None
    • 1.12.0
    • native client
    • None

    Description

      As a developer, I should be able to put and get JSON Pdx values in a region without any "extra effort" such as registering types or setting PdxReadSerialized to true when creating my cache.  Currently if I do this, put a JSON value into a region, and attempt a get, NC will segfault attempting to create a PdxInstanceImpl.

       

      Steps to repro:

      • Build NC from the `pdxinstance_json_crash_repro` branch of my (pdxcodemonkey) fork
      • Run NC integration test `PdxInstanceTest.testCreateJsonInstance`

      Expected result:

      • test passes

      Actual result:

      • test fails with a segfault in NC

       

      Attachments

        Issue Links

          Activity

            People

              Unassigned Unassigned
              bbender Blake Bender
              Votes:
              0 Vote for this issue
              Watchers:
              2 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Time Tracking

                  Estimated:
                  Original Estimate - Not Specified
                  Not Specified
                  Remaining:
                  Remaining Estimate - 0h
                  0h
                  Logged:
                  Time Spent - 40m
                  40m