GEODE-7418: Fixes issue deserializing unregistered PDX types.

If a PDX type does not have a domain class or registered serializer then
we now fall back to PdxInstance objects.

* Add test case to reproduce crash deserializing JSON values
* Add test case for serializing non-PDX types